Remove sample module and add tools